@@ -1,5 +1,10 @@
 2002-08-15  Andrew Cagney  <ac131313@redhat.com>
 
+	* infcmd.c (do_registers_info): Rename parameter ``fpregs'' to
+	``print_all''.  Only print vector registers when ``print_all''.
+
+2002-08-15  Andrew Cagney  <ac131313@redhat.com>
+
 	* i387-tdep.h (i387_print_float_info): Add `args' parameter.
 	* i387-tdep.c (i387_print_float_info): Add `args' parameter.
 
